# mayer

./: README.md  pyproject.toml  setup.py
mayer/the_skeleton/: diezel.py  func.py  losses.py
